--- a/style/style.css
+++ b/style/style.css
@@ -201,6 +201,7 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 	.theme { padding: 6px; }
 	.language ul li a { margin: 6px 3px 5px; padding: 3px 6px; }
 	.language .nav li:first-child a { margin-left: 20px; }
+	.content pre > code { display: block; padding: 10px; -webkit-border-radius: 2px; border-radius: 2px; overflow: auto; }
 	.content pre > code { -webkit-overflow-scrolling: touch; }
 }
 
@@ -222,7 +223,7 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 	.language ul li a { margin: 9px 5px 8px; padding: 3px 8px; }
 	.theme-switch { top: 9px; }
 	.theme { padding: 7px; }
-	body:not(.no-literate) .content { padding-left: 0; padding-right: 0; width: 930px; max-width: none; }
+	body:not(.no-literate) .content { padding-left: 0; padding-right: 0; max-width: none; }
 		body:not(.no-literate) .content > .content-wrapper,
 		body:not(.no-literate) .content > p, body:not(.no-literate) .content > div > p,
 		body:not(.no-literate) .content > ul, body:not(.no-literate) .content > div > ul,
@@ -235,11 +236,12 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 		body:not(.no-literate) .content > h6, body:not(.no-literate) .content > div > h6,
 		body:not(.no-literate) .content > pre, body:not(.no-literate) .content > div > pre,
 		body:not(.no-literate) .content > blockquote, body:not(.no-literate) .content > div > blockquote { width: 550px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 40px; padding-left: 40px; }
-		body:not(.no-literate) .content > h1, body:not(.no-literate) .content > div > h1 { clear: both; width: 120%; padding-right: 0px; }
+		body:not(.no-literate) .content > h1, body:not(.no-literate) .content > div > h1 { clear: both; width: 100%; padding-right: 0px; }
 		body:not(.no-literate) .content > h2, body:not(.no-literate) .content > div > h2,
-		body:not(.no-literate) .content > h3, body:not(.no-literate) .content > div > h3 { clear: both; width: 116%; }
+		body:not(.no-literate) .content > h3, body:not(.no-literate) .content > div > h3,
+		body:not(.no-literate) .content > h4, body:not(.no-literate) .content > div > h4 { clear: both; width: 96%; }
 		body:not(.no-literate) .content > pre, body:not(.no-literate) .content > div > pre,
-		body:not(.no-literate) .content > blockquote, body:not(.no-literate) .content > div > blockquote { width: 380px; padding: 4px 20px; float: right; clear: right; }
+		body:not(.no-literate) .content > blockquote, body:not(.no-literate) .content > div > blockquote { width: 380px; padding: 10px 20px 4px; float: right; clear: right; -ms-word-wrap: break-word; word-wrap: break-word; }
 			body:not(.no-literate) .content > pre + p, body:not(.no-literate) .content div > pre + p,
 			body:not(.no-literate) .content > blockquote + p, body:not(.no-literate) .content > div > blockquote + p,
 			body:not(.no-literate) .content > pre + ul, body:not(.no-literate) .content div > pre + p,
@@ -259,7 +261,6 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 		body:not(.no-literate) .content > h4, body:not(.no-literate) .content > div > h4,
 		body:not(.no-literate) .content > h5, body:not(.no-literate) .content > div > h5,
 		body:not(.no-literate) .content > h6, body:not(.no-literate) .content > div > h6 { float: left; clear: left; }
-		body:not(.no-literate) .content > h4, body:not(.no-literate) .content > div > h4,
 		body:not(.no-literate) .content > h5, body:not(.no-literate) .content > div > h5,
 		body:not(.no-literate) .content > .small-heading, body:not(.no-literate) .content > div > .small-heading,
 		body:not(.big-h3) body:not(.no-literate) .content > h3, body:not(.no-literate) .content > div > h3 { margin-left: 40px; width: 470px; margin-bottom: 3px; padding-left: 0; padding-right: 0; }
