--- a/style/custom.css
+++ b/style/custom.css
@@ -5,18 +5,16 @@
 
 .toolbar { position: relative; }
 .language { position: absolute; z-index: 100; background-color: #DCDCDC; width: 100%; top: 0px; }
-  .language.fixed { position: fixed; overflow-y: auto; top: 0px; }
-  .language .nav { margin-bottom: 0px; }
-  .language ul li a { text-transform: uppercase; font-size: 0.85em; font-weight: 700; color: #222; }
-  .language ul > li > a:hover { background-color: inherit !important; text-decoration: underline; cursor: pointer; }
-  .language ul > .active > a, .language ul > .active > a:hover { background-color: #00B2F3 !important; text-decoration: none; cursor: default; /* box-shadow: rgba(181, 184, 247, 0.34) 0 1px 0,#15191C 0 1px 0 inset,#15191D 0 -1px 0 inset; */ color: #fff; border-radius: 0px; }
+	.language.fixed { position: fixed; overflow-y: auto; top: 0px; }
+	.language .nav { margin-bottom: 0px; }
+	.language ul li a { text-transform: uppercase; font-size: 0.85em; font-weight: 700; color: #222; }
+	.language ul > li > a:hover { background-color: inherit !important; text-decoration: underline; cursor: pointer; }
+	.language ul > .active > a, .language ul > .active > a:hover { background-color: #00B2F3 !important; text-decoration: none; cursor: default; /* box-shadow: rgba(181, 184, 247, 0.34) 0 1px 0,#15191C 0 1px 0 inset,#15191D 0 -1px 0 inset; */ color: #fff; border-radius: 0px; }
 ul.level-3 { display: none; }
 
-pre[class*='-param-'], .lang-nolang-rest, .lang-nolang { display: block !important; font-family: 'Lato' sans-serif !important; }
+.code-title { word-spacing: 0.1em; margin-bottom: -15px; text-shadow: 0 1px 0 rgba(10, 10, 10, 0.23); font-weight: 300 !important; color: #808080; text-transform: uppercase; display: block;}
 
-pre[class*='-param-'] { padding-top: 15px !important; }
-.lang-param-method { margin-top: -5px !important; }
-pre[class*='-param-'] code { word-spacing: 0.1em; margin-bottom: -14px; text-shadow: 0 1px 0 rgba(10, 10, 10, 0.23); font-weight: 300 !important; color: #808080; text-transform: uppercase; }
+.lang-nolang-rest, .lang-nolang { display: block !important; font-family: 'Lato' sans-serif !important; }
 
 .lang-nolang-rest, .lang-nolang { min-height: 24px; }
 	.lang-nolang .h1, .lang-nolang .h2, .lang-nolang .h3, .lang-nolang .h4 { display: inline-block; color: #222; }
@@ -26,7 +24,7 @@ pre[class*='-param-'] code { word-spacing: 0.1em; margin-bottom: -14px; text-sha
 	.lang-nolang .h4 { font-size: 1.1em; padding-bottom: 5px; }
 
 .theme-switch { position: absolute; }
-  .theme-switch a:first-child { margin-right: 10px; }
+	.theme-switch a:first-child { margin-right: 10px; }
 .theme { display: inline-block; cursor: pointer; box-shadow: 1px 1px 1px #aaa; }
 .theme-black { background-color: #15191D; }
 .theme-white { background-color: #F5F5F5; }
@@ -34,31 +32,30 @@ pre[class*='-param-'] code { word-spacing: 0.1em; margin-bottom: -14px; text-sha
 
 @media (max-width: 1180px) /* Small desktop */ {
 	.language { box-shadow: -1px 2px 6px rgba(38, 39, 43, 0.53); }
-	pre[class*='-param-'] code { border-bottom: none !important; margin-bottom: -35px; }
 }
 
 @media (min-width: 1180px) /* Big desktop */ {
-  .language { box-shadow: 2px 1px 4px rgba(38, 39, 43, 0.53); }
+	.language { box-shadow: 2px 1px 4px rgba(38, 39, 43, 0.53); }
 }
 
 /*Logged In user*/
 .ex-right { position: absolute; right: 12px; top: 9px; }
 
 ul.top_links_user { padding: 0; width: auto; margin-top: 5px; margin-left: 0; }
-  ul.top_links_user li { position: relative; list-style: none; float: none; }
-    ul.top_links_user li a { font-size: 14px; text-transform: lowercase; display: inline-block; color: #FEFEFE; margin: 0 0 0 2px; letter-spacing: normal; padding: 0px; font-weight: normal; text-decoration: none; }
-      ul.top_links_user li a:hover { border-bottom: none; text-decoration: none; color: #FEFEFE; }
-      ul.top_links_user li a img { float: right; }
+	ul.top_links_user li { position: relative; list-style: none; float: none; }
+		ul.top_links_user li a { font-size: 14px; text-transform: lowercase; display: inline-block; color: #FEFEFE; margin: 0 0 0 2px; letter-spacing: normal; padding: 0px; font-weight: normal; text-decoration: none; }
+			ul.top_links_user li a:hover { border-bottom: none; text-decoration: none; color: #FEFEFE; }
+			ul.top_links_user li a img { float: right; }
 .top_links_user span { }
 #imgUserPhoto { width: 40px; height: 40px; border: none; }
 #lstUserMenu { display: none; }
 .top_user_drop_menu { left: auto; right: -1px; min-width: 100px; position: absolute; z-index: 10000; color: #fff; background-color: #737373; top: 47px; }
-  .top_user_drop_menu ul { margin: 0; padding: 0; }
-    .top_user_drop_menu ul li { }
-      .top_user_drop_menu ul li a { font-size: 14px; color: #fff; padding: 7px 20px; display: block; background: none; margin: 0; text-transform: lowercase; font-weight: 300; white-space: nowrap; cursor: pointer; font-weight: normal; }
-        .top_user_drop_menu ul li a:hover { background-color: #B5B5B5; color: #fff; background-image: none; cursor: pointer; text-decoration: none; }
-      .top_user_drop_menu ul li:first-child a { margin-top: 4px; }
-      .top_user_drop_menu ul li:last-child a { margin-bottom: 4px; }
+	.top_user_drop_menu ul { margin: 0; padding: 0; }
+		.top_user_drop_menu ul li { }
+			.top_user_drop_menu ul li a { font-size: 14px; color: #fff; padding: 7px 20px; display: block; background: none; margin: 0; text-transform: lowercase; font-weight: 300; white-space: nowrap; cursor: pointer; font-weight: normal; }
+				.top_user_drop_menu ul li a:hover { background-color: #B5B5B5; color: #fff; background-image: none; cursor: pointer; text-decoration: none; }
+			.top_user_drop_menu ul li:first-child a { margin-top: 4px; }
+			.top_user_drop_menu ul li:last-child a { margin-bottom: 4px; }
 .top_nav { position: absolute; top: 0; left: 152px; }
 .top_nav_user_name_first { font-size: 19px; width: 50%; float: right; text-align: right; margin: 3px 5px 1px 0px; min-width: 50px; }
 .top_nav_user_name_last { font-size: 14px; width: 50%; float: right; text-align: right; margin-right: 5px; line-height: 18px; }
@@ -67,63 +64,36 @@ ul.top_links_user { padding: 0; width: auto; margin-top: 5px; margin-left: 0; }
 .adminACL { display: none !important; }
 .top_user_drop_menu.appList { left: 13px; }
 .app-list ul { max-height: 200px; list-style: none; }
-  .app-list ul li a { padding: 7px 20px 7px 16px; }
+	.app-list ul li a { padding: 7px 20px 7px 16px; }
 .nav-separator { padding: 0px; margin: 0px; border-top: solid 1px #B5B5B5; display: block; }
 .top_user_drop_menu.appList .nav-separator:first-child, .top_user_drop_menu.appList .nav-separator:last-child { border: solid 1px #737373; }
 
 
 
 /********Table Css for markdown ************/
-table {  -moz-box-shadow: 0 0 14px rgba(0, 0, 0, 0.15);     border-collapse: collapse;   border-spacing: 0;   font-family: Menlo,Monaco,Consolas,"Courier New",monospace;  
-  display: table; }
+table { -moz-box-shadow: 0 0 14px rgba(0, 0, 0, 0.15); border-collapse: collapse; border-spacing: 0; font-family: Menlo,Monaco,Consolas,"Courier New",monospace; display: table; }
 
-table th,
-table td {
-  padding: 3px 5px;
-  line-height: 20px;
-  text-align: left;
-  vertical-align: top;
-  border-top: 1px solid #dddddd;
-  font-size: 13px;
-}
-table th {
-  font-weight: bold;
-  background-color: #bbb;
-}
-table thead th {
-  vertical-align: bottom;
-}
-table caption + thead tr:first-child th,
-table caption + thead tr:first-child td,
-table colgroup + thead tr:first-child th,
-table colgroup + thead tr:first-child td,
-table thead:first-child tr:first-child th,
-table thead:first-child tr:first-child td {
-  border-top: 0;
-}
-table tbody + tbody {
-  border-top: 2px solid #dddddd;
-}
-table {
-  width: 100%;
-  border: 1px solid #dddddd;
-  border-collapse: separate;
-  *border-collapse: collapse;
-  border-left: 0;
-}
-table th,
-table td {
-  border-left: 1px solid #dddddd;
-}
-table caption + thead tr:first-child th,
-table caption + tbody tr:first-child th,
-table caption + tbody tr:first-child td,
-table colgroup + thead tr:first-child th,
-table colgroup + tbody tr:first-child th,
-table colgroup + tbody tr:first-child td,
-table thead:first-child tr:first-child th,
-table tbody:first-child tr:first-child th,
-table tbody:first-child tr:first-child td {
-  border-top: 0;
-}
+	table th,
+	table td { padding: 3px 5px; line-height: 20px; text-align: left; vertical-align: top; border-top: 1px solid #dddddd; font-size: 13px; }
+	table th { font-weight: bold; background-color: #bbb; }
+	table thead th { vertical-align: bottom; }
+	table caption + thead tr:first-child th,
+	table caption + thead tr:first-child td,
+	table colgroup + thead tr:first-child th,
+	table colgroup + thead tr:first-child td,
+	table thead:first-child tr:first-child th,
+	table thead:first-child tr:first-child td { border-top: 0; }
+	table tbody + tbody { border-top: 2px solid #dddddd; }
+table { width: 100%; border: 1px solid #dddddd; border-collapse: separate; *border-collapse: collapse; border-left: 0; }
+	table th,
+	table td { border-left: 1px solid #dddddd; }
+	table caption + thead tr:first-child th,
+	table caption + tbody tr:first-child th,
+	table caption + tbody tr:first-child td,
+	table colgroup + thead tr:first-child th,
+	table colgroup + tbody tr:first-child th,
+	table colgroup + tbody tr:first-child td,
+	table thead:first-child tr:first-child th,
+	table tbody:first-child tr:first-child th,
+	table tbody:first-child tr:first-child td { border-top: 0; }
 /*-------------table css ends----------------*/
