--- a/style/bundle.css
+++ b/style/bundle.css
@@ -71,6 +71,13 @@ html, body { height: 100%; }
 html { overflow-x: hidden; }
 body, td, textarea, input { font-family: 'Lato', sans-serif; line-height: 1.7; font-size: 14px; color: #505050; }
 
+dl, dt, dd { font-weight: bold; float: left; padding-bottom: 20px; }
+dl { padding-top: 30px; padding-bottom: 10px; margin-bottom: 35px; border: solid 1px rgba(102,102,102,.25); border-right: none; border-left: none; }
+	dl dt { width: 28%; margin-right: 1%; word-break: break-all; text-align: right; }
+		dl dt:after { display: inline; content: ":"; line-height: 0; }
+	dl dd { width: 70%; }
+		dl dd span { font-weight: normal; font-size: 0.9em; }
+
 @media (max-width: 480px) /* Mobile */ {
 	body,
 	td,
@@ -149,6 +156,8 @@ body, td, textarea, input { font-family: 'Lato', sans-serif; line-height: 1.7; f
 		body.big-h3 .content h3:before { display: block; content: ''; border-top: solid 1px rgba(102, 102, 102, 0.25); height: 1px; position: relative; top: -40px; left: -40px; }
 
 @media (max-width: 768px) /* Mobile and tablet */ {
+	dl dt { width: 28%; margin-right: 1%; }
+	dl dd { width: 70%; }
 	.content h1,
 	.content h2,
 	.content .big-heading,
@@ -215,8 +224,10 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 .content .button + em { color: #9090aa; }
 
 @media (min-width: 1180px) /* Big desktop */ {
+	dl dt { width: 35%; margin-right: 3%; text-align: right; }
+	dl dd { width: 62%; }
 	.language .nav li:first-child a { margin-left: 20px; }
-	.language { left: 780px; }
+	.language { left: 750px; }
 }
 
 @media (min-width: 1180px) /* Big desktop */ {
@@ -270,6 +281,7 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 		body:not(.no-literate) .content > .small-heading, body:not(.no-literate) .content > div > .small-heading,
 		body:not(.big-h3) body:not(.no-literate) .content > h3, body:not(.no-literate) .content > div > h3 { margin-left: 40px; width: 470px; margin-bottom: 3px; padding-left: 0; padding-right: 0; }
 		body:not(.no-literate) .content > table, body:not(.no-literate) .content > div > table { margin: 10px 40px !important; padding: 0px !important; width: 470px !important; }
+	.content > div > dl { padding: 30px 0px 5px 0; width: 470px; margin-left: 40px; margin-right: 40px; }
 }
 
 .header { background: #3a3a3a; border-bottom: solid 3px #00b0f0; box-shadow: 0 1px 5px #969696; padding: 6px 15px 2px 24px; zoom: 1; line-height: 20px; position: relative; height: 50px; }
@@ -325,8 +337,8 @@ a.big.button { display: block; -webkit-box-sizing: border-box; -moz-box-sizing: 
 }
 
 @media (min-width: 768px) /* Desktop */ {
-	.content-root { padding-left: 230px; }
-	.menubar { position: absolute; left: 0; top: 0; bottom: 0; width: 230px; }
+	.content-root { padding-left: 200px; }
+	.menubar { position: absolute; left: 0; top: 0; bottom: 0; width: 200px; }
 		.menubar.fixed { position: fixed; overflow-y: auto; }
 		.menubar.fixed { -webkit-overflow-scrolling: touch; }
 			.menubar.fixed::-webkit-scrollbar { width: 15px; height: 15px; }
@@ -338,7 +350,7 @@ a.big.button { display: block; -webkit-box-sizing: border-box; -moz-box-sizing: 
 .menu ul.level-1 > li + li { margin-top: 20px; }
 .menu a { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: relative; display: block; border-left: solid 3px transparent; padding-top: 1px; padding-bottom: 1px; margin-right: -30px; }
 	.menu a,
-	.menu a:visited { padding-left: 30px; padding-top: 4px; padding-bottom: 4px; color: #363636; }
+	.menu a:visited { padding-left: 20px; padding-top: 4px; padding-bottom: 4px; color: #363636; }
 		.menu a:hover { }
 		.menu a.level-1 { text-transform: uppercase; font-size: 1.0em; font-weight: bold; }
 			.menu a.level-1,
