--- a/style/bundle.css
+++ b/style/bundle.css
@@ -68,7 +68,7 @@ html { overflow-x: hidden; }
 body, td, textarea, input { font-family: 'Lato', sans-serif; line-height: 1.7; font-size: 14px; color: #505050; }
 
 dl, dt, dd { font-weight: bold; float: left; padding-bottom: 20px; }
-dl { padding-top: 30px; padding-bottom: 10px; margin-bottom: 35px; border: solid 1px rgba(102,102,102,.25); border-right: none; border-left: none; }
+dl { width: 100%; padding-top: 30px; padding-bottom: 10px; margin-bottom: 35px; border: solid 1px rgba(102,102,102,.1); border-right: none; border-left: none; }
 	dl dt { width: 28%; margin-right: 1%; word-break: break-all; text-align: right; }
 		dl dt:after { display: inline; content: ":"; line-height: 0; }
 	dl dd { width: 70%; }
@@ -121,7 +121,7 @@ dl { padding-top: 30px; padding-bottom: 10px; margin-bottom: 35px; border: solid
  * Content
  */
 .content-root { min-height: 90%; position: relative; }
-.content-wrapper { padding: 0px !important; }
+.content-wrapper { padding: 0 !important; }
 .content { padding: 30px 40px 40px; zoom: 1; max-width: 700px; }
 	.content:before,
 	.content:after { content: ""; display: table; }
@@ -139,17 +139,17 @@ dl { padding-top: 30px; padding-bottom: 10px; margin-bottom: 35px; border: solid
 		.content h1 ol,
 		.content h2 ol,
 		.content h3 ol { padding-top: 10px; }
-	.content h1 { text-transform: uppercase; letter-spacing: 1px; font-size: 1.7em; }
-	.content h2 { letter-spacing: 1px; font-size: 1.5em; border-bottom: solid 1px rgba(102, 102, 102, 0.25); }
-	.content h3 { font-size: 1.3em !important; padding-bottom: 4px !important; }
-	.content h4 { padding-bottom: 4px !important; }
+	.content h1 { text-transform: uppercase; letter-spacing: 1px; font-size: 1.8em; }
+	.content h2 { letter-spacing: 1px; font-size: 1.7em; border-top: solid 1px rgba(102, 102, 102, 0.25); }
+	.content h3 { font-size: 1.5em !important; padding-bottom: 4px !important; }
+	.content h4, .content h5 { font-size: 1.2em !important; padding-bottom: 4px !important; }
 	.content h1,
 	.content h2,
 	.content .big-heading,
 	body.big-h3 .content h3 { padding-top: 80px; }
 		.content h1:before,
 		.content .big-heading:before,
-		body.big-h3 .content h3:before { display: block; content: ''; border-top: solid 1px rgba(102, 102, 102, 0.25); height: 1px; position: relative; top: -40px; left: -40px; }
+		body.big-h3 .content h3:before { display: block; content: ''; border-top: solid 1px rgba(102, 102, 102, .3); height: 1px; position: relative; top: -40px; left: -40px; }
 
 @media (max-width: 768px) /* Mobile and tablet */ {
 	dl dt { width: 28%; margin-right: 1%; }
@@ -167,13 +167,15 @@ dl { padding-top: 30px; padding-bottom: 10px; margin-bottom: 35px; border: solid
 .content h4,
 .content h5,
 .content .small-heading,
-body:not(.big-h3) .content h3 { border-bottom: solid 1px rgba(102, 102, 102, 0.25); color: #888888; padding-top: 30px; padding-bottom: 10px; }
+body:not(.big-h3) .content h3 { border-top: solid 1px rgba(102, 102, 102, 0.25); padding-top: 60px; margin-top: 100px; }
 body:not(.big-h3) .content h3 { font-size: 0.9em; }
 .content h1:first-child { padding-top: 0; }
 	.content h1:first-child,
 	.content h1:first-child a,
 	.content h1:first-child a:visited { color: #505050; padding-top: 10px; }
 		.content h1:first-child:before { display: none; }
+.content h4 { margin-top: 50px; }
+.content h5 { border: none; border-bottom: solid 1px rgba(102, 102, 102, 0.25); margin-top: 50px; }
 
 @media (max-width: 768px) /* Tablet */ {
 	.content h4,
@@ -224,6 +226,7 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 	dl dd { width: 62%; }
 	.language .nav li:first-child a { margin-left: 20px; }
 	.language { left: 750px; }
+	.content-wrapper { padding-bottom: 60px !important; }
 }
 
 @media (min-width: 1180px) /* Big desktop */ {
