--- a/style/style.css
+++ b/style/style.css
@@ -122,7 +122,7 @@ dl { width: 100%; padding-top: 30px; padding-bottom: 10px; margin-bottom: 35px; 
  */
 .content-root { min-height: 90%; position: relative; }
 .content-wrapper { padding: 0 !important; }
-.content { padding: 30px 40px 40px; zoom: 1; max-width: 700px; }
+.content { padding: 30px 40px 40px; zoom: 1; max-width: 100%; }
 	.content:before,
 	.content:after { content: ""; display: table; }
 	.content:after { clear: both; }
@@ -146,10 +146,10 @@ dl { width: 100%; padding-top: 30px; padding-bottom: 10px; margin-bottom: 35px; 
 	.content h1,
 	.content h2,
 	.content .big-heading,
-	body.big-h3 .content h3 { padding-top: 80px; }
+	body.big-h3 .content h3 { padding-top: 80px; clear: both; }
 		.content h1:before,
 		.content .big-heading:before,
-		body.big-h3 .content h3:before { display: block; content: ''; border-top: solid 1px rgba(102, 102, 102, .3); height: 1px; position: relative; top: -40px; left: -40px; }
+		body.big-h3 .content h3:before { display: block; content: ''; border-top: solid 1px rgba(102, 102, 102, .3); height: 1px; position: relative; top: -40px; left: 0px; }
 
 @media (max-width: 768px) /* Mobile and tablet */ {
 	dl dt { width: 28%; margin-right: 1%; }
@@ -222,6 +222,10 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 .content .button + em { color: #9090aa; }
 
 @media (min-width: 1180px) /* Big desktop */ {
+	body.big-h3 .content h3 { padding-top: 80px; }
+		.content h1:before,
+		.content .big-heading:before,
+		body.big-h3 .content h3:before { left: -40px; }
 	dl dt { width: 35%; margin-right: 3%; text-align: right; }
 	dl dd { width: 62%; }
 	.language .nav li:first-child a { margin-left: 20px; }
